--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,5 @@
-spring.datasource.url= jdbc:h2:mem:streamer
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=adminadmin
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.open-in-view=false
-
-spring.h2.console.enabled=true
+server.port = 8080
+host.url=localhost:8080
+sinfo.genres.url=http://localhost:8081
+sinfo.games.url=http://localhost:8082
+sinfo.streamers.url=http://localhost:8083
