--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
 
 spring.h2.console.enabled=true
+
+server.port=8081
+sinfo.games.url=http://localhost:8082/api/
