--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:h2:mem:streamer
+spring.datasource.url= jdbc:h2:mem:streamerReduced
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=adminadmin
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
 
 spring.h2.console.enabled=true
+
+server.port=8082
+
+sinfo.streamers.url = http://loclahost:8083
