Finished first attempt.

--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>pl.edu.pg</groupId>
-    <artifactId>aui-lab-streamer-info</artifactId>
+    <artifactId>aui-lab-streamerReduced-info</artifactId>
     <version>1</version>
-    <name>aui-lab-streamer-info</name>
-    <description>Lab assignment: streamer info</description>
+    <name>aui-lab-streamerReduced-info</name>
+    <description>Lab assignment: streamerReduced info</description>
 
     <properties>
         <java.version>11</java.version>
@@ -46,6 +46,12 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
