Fixed post function in event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.h2.console.enabled=true
 
 server.port = 8083
 
-sinfo.genres.url=http://localhost:8081
-sinfo.games.url=http://localhost:8082
+streamers-info.genres.url=http://localhost:8081/api/
+streamers-info.games.url=http://localhost:8082/api/
