Fixed post function in event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.h2.console.enabled=true
 
 server.port=8082
 
-sinfo.streamers.url = http://loclahost:8083
+streamer-info.streamers.url = http://localhost:8083/api/
