Fixed urls in config and event dto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:h2:mem:streamer
+spring.datasource.url= jdbc:h2:mem:streamerReduced
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=adminadmin
@@ -11,4 +11,5 @@ spring.jpa.open-in-view=false
 spring.h2.console.enabled=true
 
 server.port=8081
-sinfo.games.url=http://localhost:8082/api/
+streamer-info.games.url=http://localhost:8082/api/
+streamer-info.streamers.url=http://localhost:8083/api/
